--- a/SaxoBooks/SaxoBooks/Views/Home/_GetBooks.cshtml
+++ b/SaxoBooks/SaxoBooks/Views/Home/_GetBooks.cshtml
@@ -4,7 +4,10 @@
     {
         foreach (var book in @Model)
         {
-            <div class="col-md-3">
+            <div class="book-image-wrapper">
+                <img src="@book.ImageUrl"/>
+            </div>
+            <div class="book-isbn-wrapper">
                 Book ISBN: @book.Isbn
             </div>
         }
