--- a/SaxoBooks/SaxoBooks/Views/Home/_GetBooks.cshtml
+++ b/SaxoBooks/SaxoBooks/Views/Home/_GetBooks.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<SaxoBooks.Models.Book>
-<div id="bookResults">
+<div id="book-results">
     @if (@Model != null)
     {
         foreach (var book in @Model)
