--- a/SaxoBooks/SaxoBooks/Views/Shared/_Layout.cshtml
+++ b/SaxoBooks/SaxoBooks/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Saxo Books Application</p>
+        <footer class="footer">
+            <hr />
+            <p>&copy; @DateTime.Now.Year - Sergii Kovach. Saxo Books Application</p>
         </footer>
     </div>
 
