--- a/SaxoBooks/SaxoBooks/Content/Site.css
+++ b/SaxoBooks/SaxoBooks/Content/Site.css
@@ -3,44 +3,68 @@
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
+/*Set padding to keep content from hitting the edges*/
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
+/*Override the default bootstrap behavior where horizontal description lists will truncate terms that are too long to fit in the left column*/
 .dl-horizontal dt {
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-
+/*Set width on the form input elements since they're 100% wide by default*/
+input, select,
 div {
-    display: inline-block;
+    display: block;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
 }
 
 .text-area-wrapper {
-    border-right: solid 2px black 
+    width: auto;
+    height: 500px;
+    position: fixed;
 }
 
-.IsbnTextArea {
-    border: none;
-    height: 750px;
-    width: 300px;
-    resize: none;
-}
-
-.bookResults {
-    border: blue 3px;
-    height: 100%;
-    margin: 5px;
+.isbn-text-area {
+    border: solid 1px black;
+    min-width: 100%;
+    height: 500px;
+    margin-top: 10px;
 }
 
 .book-image-wrapper {
+    margin: 10px;
+    width: auto;
+    text-align: center;
+}
 
+.book-isbn-wrapper {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.books {
+    margin-top: 30px;
+}
+
+.get-books-button {
+    padding: 20px;
+    border: 1px solid;
+    border-radius: 5px;
+    line-height: 20px;
+    text-align: center;
+    background-color: gray;
+    color: white;
+    display: block;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
 }
